--- a/MedHelp.TelegramBot/MedHelp.TelegramBot.csproj
+++ b/MedHelp.TelegramBot/MedHelp.TelegramBot.csproj
@@ -8,6 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Settings\**" />
+    <EmbeddedResource Remove="Settings\**" />
+    <None Remove="Settings\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.Bcl.AsyncInterfaces" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.8">
@@ -31,11 +37,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\MedHelp.Api\MedHelp.Api.csproj" />
+    <ProjectReference Include="..\MedHelp.Core\MedHelp.Core.csproj" />
     <ProjectReference Include="..\MedHelp.DBase\MedHelp.DBase.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Settings\" />
   </ItemGroup>
 
 </Project>
