--- a/MedHelp.Core/MedHelp.Core.csproj
+++ b/MedHelp.Core/MedHelp.Core.csproj
@@ -7,6 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Services\FreeSans.ttf" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Services\FreeSans.ttf">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FuzzySharp" Version="2.0.2" />
     <PackageReference Include="itext7" Version="8.0.5" />
     <PackageReference Include="itext7.bouncy-castle-adapter" Version="8.0.5" />
