Исправлены мелкие ошибки

--- a/.gitignore
+++ b/.gitignore
@@ -433,3 +433,8 @@ Desktop.ini
 .DS_Store
 
 /MedHelp.TelegramBot/appsettings.json
+
+/.idea/.idea.MedHelp/.idea/.name
+/.idea/.idea.MedHelp/.idea/indexLayout.xml
+/.idea/.idea.MedHelp/.idea/projectSettingsUpdater.xml
+/.idea/.idea.MedHelp/.idea/vcs.xml
